[package]
name = "substrate-harvester"
version = "0.3.0"
authors = ["Denis Tsai <denistsai@aetheras.io>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "2.0.0" }
tokio = { version = "0.2", features = [ "signal", "rt-core", "rt-threaded" ] }
hex = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
log = "0.4"
futures = "0.3"
futures-timer = "3"
thiserror = "1"

frame-system = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
frame-metadata = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }

sp-core = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-rpc = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-storage= { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353" }
tracing = "0.1.21"
